--- a/bapII.html
+++ b/bapII.html
@@ -50,7 +50,10 @@
       <a id="close" href="javascript:void(0)" class="close" onclick="cNav()"><img src="img/x.png" alt="X" class="x"></a>
       <a class="home" href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
-      <a href="#">Product</a>
+      <button class="nsect" href="#">Product  <i class="arrow down"></i></button>
+      <div class="nsec" >
+        <a href="bapII.html"><i class="arrow right"></i>Body Acu-Pro II</a>
+      </div>
       <a href="help.html">Help</a>
     </div>
   </div>
@@ -84,12 +87,12 @@
       </div>
       <div class="sec6">
         <h1>6 Different mode & 4 different automode </h1>
-        <img src="img/hmr.jpg"  alt="Hammering">
-        <img src="img/acp.jpg"  alt="Acupuncture">
-        <img src="img/npy.jpg"  alt="Naprapathy">
-        <img src="img/cup.jpg"  alt="Cupping">
-        <img src="img/scp.jpg"  alt="Scraping">
-        <img src="img/msg.jpg"  alt="Massage"><br>
+        <img src="img/hmr.jpg" class="hmri" alt="Hammering">
+        <img src="img/acp.jpg" class="acpi" alt="Acupuncture">
+        <img src="img/npy.jpg" class="npyi" alt="Naprapathy">
+        <img src="img/cup.jpg" class="cupi" alt="Cupping">
+        <img src="img/scp.jpg" class="scpi" alt="Scraping">
+        <img src="img/msg.jpg" class="msgi" alt="Massage"><br>
         <p class="hmr">Mode 1 <br>Hammering</p>
         <p class="acp">Mode 2 <br>Acupuncture</p>
         <p class="npy">Mode 3 <br>Naprapathy</p>
@@ -139,6 +142,7 @@
   var sideNav = document.getElementById("msnav")
   var sideNavA = document.getElementById("snava")
   var retail = document.getElementsByClassName("sect")
+  var nav = document.getElementsByClassName("nsect")
   var i;
 
   function openNav() {
@@ -164,6 +168,18 @@
         content.style.maxHeight = null; 
       } else {
         content.style.maxHeight = content.scrollHeight + "px";
+      }
+    })
+  }
+
+  for (i = 0; i < nav.length; i++) {
+    nav[i].addEventListener("click", function() {
+      this.classList.toggle("active");
+      var content = this.nextElementSibling;
+      if (content.style.display === "block") {
+        content.style.display = "none"; 
+      } else {
+        content.style.display = "block";
       }
     })
   }
