--- a/help.html
+++ b/help.html
@@ -48,7 +48,10 @@
       <a id="close" href="javascript:void(0)" class="close" onclick="cNav()"><img src="img/x.png" alt="X" class="x"></a>
       <a class="home" href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
-      <a href="#" style="background-color: #ff7d7d;">Product</a>
+      <button class="nsect" href="#">Product  <i class="arrow down"></i></button>
+      <div class="nsec" >
+        <a href="bapII.html"><i class="arrow right"></i>Body Acu-Pro II</a>
+      </div>
       <a href="help.html">Help</a>
     </div>
 
@@ -101,6 +104,8 @@
 
   var sideNav = document.getElementById("msnav")
   var sideNavA = document.getElementById("snava")
+  var nav = document.getElementsByClassName("nsect")
+  var i;
 
   function openNav() {
     msnav.style.width = "50%";
@@ -119,6 +124,18 @@
 
   function undone() {
     alert("Under contruction!");
+  }
+
+  for (i = 0; i < nav.length; i++) {
+    nav[i].addEventListener("click", function() {
+      this.classList.toggle("active");
+      var content = this.nextElementSibling;
+      if (content.style.display === "block") {
+        content.style.display = "none"; 
+      } else {
+        content.style.display = "block";
+      }
+    })
   }
 
 </script>
