--- a/ht.html
+++ b/ht.html
@@ -31,62 +31,84 @@
   <header>
     <nav id="navbar">
       <span onclick="openNav()">&#9776;</span>
-      <ul>
-        <a class="alg" href="#"><img class="logo" src="img/omizu-logo.jpg" alt="omizu logo"></a>
-        <li><a id="a" onclick="undone()" class="cu" href="#" style="background-color: #ff7d7d;">Home</a></li>
-        <li><a id="b" onclick="undone()" href="#" style="background-color: #ff7d7d;">About Us</a></li>
-        <li><a id="c" href="">Product <i class="arrow down"></i></a>
-            <ul>
-              <li><a href="bapII.html">Body Acu-Pro II</a></li>
-              <li><a href="ht.html">Home Therapy</a></li>
-            </ul>
-        </li>
-        <li><a id="d" href="help.html">Help</a></li>
-      </ul>
+      <a class="alg" href="#"><img class="logo" src="img/omizu-logo.jpg" alt="omizu logo"></a>
+        <ul>
+          <li class="a"><a id="a" onclick="undone()" class="cu" href="#" style="background-color: #ff7d7d;">Home</a></li>
+          <li class="b"><a id="b" onclick="undone()" href="#" style="background-color: #ff7d7d;">About Us</a></li>
+          <div class="drop">
+             <button class="dropbtn">Product<i class="arrow down"></i></button>
+             <div class="drop-content">
+               <a href="bapII.html">Body Acu-Pro II</a>
+               <a href="ht.html">Home Therapy</a>
+               <a href="osz.html">Oshinizu</a>
+             </div>
+          </div>
+          <li class="d"><a id="d" href="help.html">Help</a></li>
+        </ul>
     </nav>
-  </header>
+</header>
 
-  <div id="msnav" class="snav">
-    <div id="snava">
-      <a id="close" href="javascript:void(0)" class="close" onclick="cNav()"><img src="img/x.png" alt="X" class="x"></a>
-      <a class="home" href="index.html">Home</a>
-      <a href="aboutus.html">About Us</a>
-      <button class="nsect" href="#">Product  <i class="arrow down"></i></button>
-      <div class="nsec" >
-        <a href="bapII.html"><i class="arrow right"></i>Body Acu-Pro II</a>
-      </div>
-      <a href="help.html">Help</a>
+<div id="msnav" class="snav">
+  <div id="snava">
+    <a id="close" href="javascript:void(0)" class="close" onclick="cNav()"><img src="img/x.png" alt="X" class="x"></a>
+    <a class="home" href="index.html">Home</a>
+    <a href="aboutus.html">About Us</a>
+    <button class="nsect" href="#">Product  <i class="arrow down"></i></button>
+    <div class="nsec" >
+      <a href="bapII.html"><i class="arrow right"></i>Body Acu-Pro II</a>
+      <a href="ht.html"><i class="arrow right"></i>Home Therapy</a>
+      <a href="osz.html"><i class="arrow right"></i>Oshinizu</a>
     </div>
+    <a href="help.html">Help</a>
   </div>
+</div>
 
   <body>
     <div class="head">
       <div class="sec1">
-          <h1>Portable Home Therapy</h1>
-          <p></p>
-          <img src="img/ht.jpg" alt="Body Acu-Pro II">
+          <h1>Omizu Home Therapy</h1>
+          <p>With Omizu Home Therapy now you can use a sauna at home without going outsite! You can also use it with <a href="ch.html">herbs</a> and other beauty products!</p>
+          <img src="img/ht.png" alt="Omizu Home Therapy">
       </div>
       <div class="bk">
         <button class="sect"><i class="arrow down"></i>Where to buy<i class="arrow down"></i></button>
         <div class="sec3">
-          <a target="_blank" href="#"><img src="img/lzd.png" alt=""></a>
+          <a target="_blank" href="https://bit.ly/omizu-hometherapy"><img src="img/lzd.png" alt=""></a>
+          <a target="_blank" href="https://bit.ly/omizu-hometherapys"><img class="shp" src="img/shp.jpg" alt=""></a>
         </div>
-      
       </div>
       <div class="bk"></div>
-
-
-      <div class="bk"></div>
+      <div class="sec2">
+        <h2 class="fts">Features!</h2>
+        <ul>
+           <li><p>Can be fold up for easy storage</p></li>
+           <li><p>Can be use with other beauty product</p></li>
+           <li><p>Steam pot provided to generate steam</p></li>
+           <li><p>Vent design let you leaves your hands out for reading, etc.</p></li>
+        </ul>
+        <h2 class="gd">What's so good about home therapy?</h2>
+        <ul>
+          <li><p>It can keep your skin healthy</p></li>
+          <li><p>Relaxes tired and arching muscles</p></li>
+          <li><p>Burn colories</p></li>
+          <li><p>Temporary relief for arthritis</p></li>
+          <li><p>Relieves joints and muscle pains</p></li>
+          <li><p>Improves body tone</p></li>
+          <li><p>Help aid sleep</p></li>
+        </ul>
+      </div>
       <div class="sec4">
         <h3>Specification</h3>
-        <h4>Power: <br>
-           Frequency: <br>
-           Battery Capacity: <br>
-            Size:</h4>
-            <p>DC3.7V <br>
-            1~250Hz <br>
-            500Mah <br>
-            139*68*20.5mm</p>
+        <h4>
+          Power: <br>
+          Size (Home Therapy): <br>
+          Size (Steampot): <br>
+        </h4>
+        <p>
+          - <br>
+          - <br>
+          - <br>
+        </p>
       </div>
       <div class="bk"></div>
     </div>
