--- a/ch.html
+++ b/ch.html
@@ -36,10 +36,15 @@
             <li class="a"><a id="a" onclick="undone()" class="cu" href="#" style="background-color: #ff7d7d;">Home</a></li>
             <li class="b"><a id="b" onclick="undone()" href="#" style="background-color: #ff7d7d;">About Us</a></li>
             <div class="drop">
-               <button class="dropbtn">Product<i class="arrow down"></i></button>
+               <button class="dropbtn">Product <i class="arrow down"></i></button>
                <div class="drop-content">
-                 <a href="bapII.html">Body Acu-Pro II</a>
-                 <a href="ht.html">Home Therapy</a>
+                <div class="dropp">
+                  <button class="homebtn"><a href="ht.html"><i class="arrow left"></i> Home Therapy</a></button>
+                  <div class="home-content">
+                    <a href="ch.html">Chinese Herbs</a>
+                  </div>
+                </div>
+                 <a class="nav-bapII" href="bapII.html">Body Acu-Pro II</a>
                  <a href="osz.html">Oshinizu</a>
                </div>
             </div>
@@ -68,7 +73,7 @@
       <div class="sec1">
           <h1>Chinese Herbs</h1>
           <p>Chinese Herbs is a accessories for <a href="ht.html">Home Therapy</a>.</p>
-          <img src="img/ch.JPG" alt="Omizu Home Therapy">
+          <img src="img/ch.jpg" alt="Chinese Herbs with packaging">
       </div>
       <div class="bk">
         <button class="sect"><i class="arrow down"></i>Where to buy<i class="arrow down"></i></button>
@@ -79,16 +84,22 @@
         <div class="bk"></div>
       </div>
       <div class="sec2">
-
+        <img src="img/cht.jpg" alt="Chinese Herbs Close up">
+        <h2 class="body-s">Body Slimming</h2>
+        <p class="slim">Body slimming lo</p>
+        <h2 class="body-b">Body Beauty</h2>
+        <p class="beau">Body beauty lo</p>
+        <h2 class="body-w">Body Wellness</h2>
+        <p class="well">Body Wellness??</p>
       </div>
       <div class="bk"></div>
       <div class="sec4">
         <div>
           <h3>Specification</h3>
           <h4>
-            Power:<br>
-            Frequency:<br>
-            Size:<br>
+            ???:<br>
+            ???:<br>
+            ???:<br>
           </h4>
           <p>
             - <br>
