--- a/ht.html
+++ b/ht.html
@@ -30,23 +30,28 @@
   </head>
   <header>
     <nav id="navbar">
-      <span onclick="openNav()">&#9776;</span>
-      <a class="alg" href="#"><img class="logo" src="img/omizu-logo.jpg" alt="omizu logo"></a>
-        <ul>
-          <li class="a"><a id="a" onclick="undone()" class="cu" href="#" style="background-color: #ff7d7d;">Home</a></li>
-          <li class="b"><a id="b" onclick="undone()" href="#" style="background-color: #ff7d7d;">About Us</a></li>
-          <div class="drop">
-             <button class="dropbtn">Product<i class="arrow down"></i></button>
-             <div class="drop-content">
-               <a href="bapII.html">Body Acu-Pro II</a>
-               <a href="ht.html">Home Therapy</a>
-               <a href="osz.html">Oshinizu</a>
-             </div>
-          </div>
-          <li class="d"><a id="d" href="help.html">Help</a></li>
-        </ul>
-    </nav>
-</header>
+        <span onclick="openNav()">&#9776;</span>
+        <a class="alg" href="#"><img class="logo" src="img/omizu-logo.jpg" alt="omizu logo"></a>
+          <ul>
+            <li class="a"><a id="a" onclick="undone()" class="cu" href="#" style="background-color: #ff7d7d;">Home</a></li>
+            <li class="b"><a id="b" onclick="undone()" href="#" style="background-color: #ff7d7d;">About Us</a></li>
+            <div class="drop">
+               <button class="dropbtn">Product <i class="arrow down"></i></button>
+               <div class="drop-content">
+                <div class="dropp">
+                  <button class="homebtn"><a href="ht.html"><i class="arrow left"></i> Home Therapy</a></button>
+                  <div class="home-content">
+                    <a href="ch.html">Chinese Herbs</a>
+                  </div>
+                </div>
+                 <a class="nav-bapII" href="bapII.html">Body Acu-Pro II</a>
+                 <a href="osz.html">Oshinizu</a>
+               </div>
+            </div>
+            <li class="d"><a id="d" href="help.html">Help</a></li>
+          </ul>
+      </nav>
+  </header>
 
 <div id="msnav" class="snav">
   <div id="snava">
