--- a/ch.html
+++ b/ch.html
@@ -86,20 +86,20 @@
       <div class="sec2">
         <img src="img/cht.jpg" alt="Chinese Herbs Close up">
         <h2 class="body-s">Body Slimming</h2>
-        <p class="slim">Body slimming lo</p>
+        <p class="slim">Description</p>
         <h2 class="body-b">Body Beauty</h2>
-        <p class="beau">Body beauty lo</p>
+        <p class="beau">Description</p>
         <h2 class="body-w">Body Wellness</h2>
-        <p class="well">Body Wellness??</p>
+        <p class="well">Description</p>
       </div>
       <div class="bk"></div>
       <div class="sec4">
         <div>
           <h3>Specification</h3>
           <h4>
-            ???:<br>
-            ???:<br>
-            ???:<br>
+            -:<br>
+            -:<br>
+            -:<br>
           </h4>
           <p>
             - <br>
