Changes logo for link <em>

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="Description" content="Health is our number one priority. We sell health care product to improve your life!">
     <meta name="Keywords" content="Omizu, health, health care, acupuncture, sauna, Malaysia">
     <meta property="og:type" content="company">
-    <meta property="og:image" content="https://omizu.netlify.app/img/omizu-logo.jpg">
+    <meta property="og:image" content="https://omizu.netlify.app/img/logonew.png">
     <meta property="og:url" content="https://omizu.netlify.app">
     <meta property="og:title" content="Omizu Health is our number one priority!">
     <meta property="og:description" content="We sell health care product in Malaysia.">
