--- a/bapII.html
+++ b/bapII.html
@@ -19,14 +19,14 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/bapll.css">
     <meta property="og:type" content="company">
-    <meta property="og:image" content="https://omizu.netlify.app/img/bapllon-min.png">
-    <meta property="og:url" content="https://omizu.netlify.app/bapII">
+    <meta property="og:image" content="https://omizu.com.my/img/bapllon-min.png">
+    <meta property="og:url" content="https://omizu.com.my/bapII">
     <meta property="og:title" content="Omizu Body Acu-Pro II Portable yet powerfull">
     <meta property="og:description" content="Body Acupuncture-Pro II is a new generation of healt care product. It combines theories of Chinese therapeutic treatments and modern technology to produce a massage experience for the user. It can produce 6 different traditional massage techniques.
     ">
     <meta property="og:site_name" content="Omizu | Body Acu-Pro">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://omizu.netlify.app/bapII">
+    <meta name="twitter:site" content="https://omizu.com.my/bapII">
   </head>
   <header>
     <nav id="navbar">
