--- a/ht.html
+++ b/ht.html
@@ -19,14 +19,13 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/ht.css">
     <meta property="og:type" content="company">
-    <meta property="og:image" content="https://omizu.netlify.app/img/bapllon-min.jpg">
-    <meta property="og:url" content="https://omizu.netlify.app/ht">
-    <meta property="og:title" content="Omizu Body Acu-Pro II Portable yet powerfull">
-    <meta property="og:description" content="Body Acupuncture-Pro II is a new generation of healt care product. It combines theories of Chinese therapeutic treatments and modern technology to produce a massage experience for the user. It can produce 6 different traditional massage techniques.
-    ">
+    <meta property="og:image" content="https://omizu.com.my/img/ht.png">
+    <meta property="og:url" content="https://omizu.com.my/ht">
+    <meta property="og:title" content="Omizu Home Therapy | Use it at home | Portable |">
+    <meta property="og:description" content="With Omizu Home Therapy now you can use a Home Therapy at home without going outsite! You can also use it with herbs and other beauty products!">
     <meta property="og:site_name" content="Omizu Home Therapy">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://omizu.netlify.app/ht">
+    <meta name="twitter:site" content="https://omizu.com.my/ht">
   </head>
   <header>
     <nav id="navbar">
