--- a/help.html
+++ b/help.html
@@ -16,13 +16,13 @@
     <meta name="Description" content="Need our help? Just contact us! We accept whatsapp or you can call us!">
     <meta name="Keywords" content="Omizu, health, health care, acupuncture, sauna, Malaysia, contact us, help, google map, location, customer services">
     <meta property="og:type" content="company">
-    <meta property="og:image" content="https://omizu.netlify.app/img/omizu-logo.jpg">
-    <meta property="og:url" content="https://omizu.netlify.app/help">
+    <meta property="og:image" content="https://omizu.com.my/img/logonew.png">
+    <meta property="og:url" content="https://omizu.com.my/help">
     <meta property="og:title" content="Omizu Customer Service Call us or whatsapp us!">
     <meta property="og:description" content="Got problem? Call us or whatsapp us we are available at business hours.">
     <meta property="og:site_name" content="Omizu | Help">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://omizu.netlify.app/help">
+    <meta name="twitter:site" content="https://omizu.com.my/help">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/help.css">
   </head>
