--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <meta name="Description" content="Health is our number one priority. We sell health care product to improve your life!">
     <meta name="Keywords" content="Omizu, health, health care, acupuncture, sauna, Malaysia">
     <meta property="og:type" content="company">
-    <meta property="og:image" content="https://omizu.netlify.app/img/logonew.png">
-    <meta property="og:url" content="https://omizu.netlify.app">
+    <meta property="og:image" content="https://omizu.com.my/img/logonew.png">
+    <meta property="og:url" content="https://omizu.com.my">
     <meta property="og:title" content="Omizu Health is our number one priority!">
     <meta property="og:description" content="We sell health care product in Malaysia.">
     <meta property="og:site_name" content="Omizu">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://omizu.netlify.app">
+    <meta name="twitter:site" content="https://omizu.com.my">
     <link rel="shortcut icon" href="favicon.ico">
   </head>
   <header>
