--- a/osz.html
+++ b/osz.html
@@ -19,14 +19,14 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/osz.css">
     <meta property="og:type" content="company">
-    <meta property="og:image" content="https://omizu.netlify.app/img/bapllon-min.jpg">
-    <meta property="og:url" content="https://omizu.netlify.app/ht">
+    <meta property="og:image" content="https://omizu.com.my/img/osz.jpg">
+    <meta property="og:url" content="https://omizu.com.my/osz">
     <meta property="og:title" content="Omizu | Oshinizu">
     <meta property="og:description" content="Oshinizu is a new generation of healt care product. It combines theories of Chinese therapeutic treatments and modern technology to produce a massage experience for the user. It can produce 6 different traditional massage techniques.
     ">
     <meta property="og:site_name" content="Omizu | Oshinizu">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://omizu.netlify.app/osz">
+    <meta name="twitter:site" content="https://omizu.com.my/osz">
   </head>
   <header>
     <nav id="navbar">
