twitter meta V7 update

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <meta property="og:description" content="We sell health care product in Malaysia.">
     <meta property="og:site_name" content="Omizu">
     <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Omizu Health is our number one priority!">
+    <meta name="twitter:image" content="https://omizu.com.my/img/logonew.png">
+    <meta name="twitter:description" content="We sell health care product in Malaysia.">  
     <meta name="twitter:site" content="https://omizu.com.my">
     <link rel="shortcut icon" href="favicon.ico">
   </head>
