twitter meta V7.1 update

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Omizu Health is our number one priority!">
     <meta name="twitter:image" content="https://omizu.com.my/img/logonew.png">
+    <meta name="twitter:url" content="https://omizu.com.my">
     <meta name="twitter:description" content="We sell health care product in Malaysia.">  
-    <meta name="twitter:site" content="https://omizu.com.my">
+    <meta name="twitter:site" content="@omizu">
     <link rel="shortcut icon" href="favicon.ico">
   </head>
   <header>
