--- a/ch.html
+++ b/ch.html
@@ -19,7 +19,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/ch.css">
     <meta property="og:type" content="company">
-    <meta property="og:image" content="https://omizu.com.my/img/cht.JPG">
+    <meta property="og:image" content="https://omizu.com.my/img/cht-min.JPG">
     <meta property="og:url" content="https://omizu.com.my/ch">
     <meta property="og:title" content="Omizu | Chinese Herbs">
     <meta property="og:description" content="Chinese Herbs is a accessories for Home Therapy">
@@ -72,7 +72,7 @@
       <div class="sec1">
           <h1>Chinese Herbs</h1>
           <p>Chinese Herbs is a accessories for <a href="ht.html">Home Therapy</a>.</p>
-          <img src="img/ch.jpg" alt="Chinese Herbs with packaging">
+          <img src="img/ch-min.jpg" alt="Chinese Herbs with packaging">
       </div>
       <div class="bk">
         <button class="sect"><i class="arrow down"></i>Where to buy<i class="arrow down"></i></button>
@@ -83,7 +83,7 @@
         <div class="bk"></div>
       </div>
       <div class="sec2">
-        <img src="img/cht.jpg" alt="Chinese Herbs Close up">
+        <img src="img/cht-min.jpg" alt="Chinese Herbs Close up">
         <h2 class="body-s">Body Slimming</h2>
         <p class="slim">Description</p>
         <h2 class="body-b">Body Beauty</h2>
