--- a/ht.html
+++ b/ht.html
@@ -19,7 +19,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/ht.css">
     <meta property="og:type" content="company">
-    <meta property="og:image" content="https://omizu.com.my/img/ht.png">
+    <meta property="og:image" content="https://omizu.com.my/img/ht-min.png">
     <meta property="og:url" content="https://omizu.com.my/ht">
     <meta property="og:title" content="Omizu Home Therapy | Use it at home | Portable |">
     <meta property="og:description" content="With Omizu Home Therapy now you can use a Home Therapy at home without going outsite! You can also use it with herbs and other beauty products!">
@@ -72,7 +72,7 @@
       <div class="sec1">
           <h1>Omizu Home Therapy</h1>
           <p>With Omizu Home Therapy now you can use a Home Therapy at home without going outsite! You can also use it with <a href="ch.html">herbs</a> and other beauty products!</p>
-          <img src="img/ht.png" alt="Omizu Home Therapy">
+          <img src="img/ht-min.png" alt="Omizu Home Therapy">
       </div>
       <div class="bk">
         <button class="sect"><i class="arrow down"></i>Where to buy<i class="arrow down"></i></button>
