--- a/osz.html
+++ b/osz.html
@@ -19,7 +19,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/osz.css">
     <meta property="og:type" content="company">
-    <meta property="og:image" content="https://omizu.com.my/img/osz.jpg">
+    <meta property="og:image" content="https://omizu.com.my/img/osz-min.jpg">
     <meta property="og:url" content="https://omizu.com.my/osz">
     <meta property="og:title" content="Omizu | Oshinizu">
     <meta property="og:description" content="Oshinizu is a new generation of healt care product. It combines theories of Chinese therapeutic treatments and modern technology to produce a massage experience for the user. It can produce 6 different traditional massage techniques.
@@ -73,7 +73,7 @@
       <div class="sec1">
           <h1>Oshinizu</h1>
           <p>Oshinizu output electronic pulse current which is distributed based on massaging rhythms, stimulates the nerves, generating muscle movement without the requirement of the user, this is natural occurrence and direct result of the massager, it is designer in order to help alleviate pain, if uses correctly.</p>
-          <img src="img/osz.jpg" alt="Omizu Home Therapy">
+          <img src="img/osz-min.jpg" alt="Omizu Home Therapy">
       </div>
       <div class="bk">
         <button class="sect"><i class="arrow down"></i>Where to buy<i class="arrow down"></i></button>
